# seguimiento2

./: CMakeLists.txt  NaivOnArray.cpp  Winograd.cpp  aux.cpp  blockEnIII.cpp  blockEnhIV.cpp  blockParIV.cpp  blockSeqIV.cpp  blockSeqV.cpp  bloqSeqIII.cpp  functions.h  main.cpp  naivLoopUnrollingFour.cpp  naivLoopUnrollingTwo.cpp  parallelBlockV.cpp  parallelbloqIII.cpp  strassenNaiv.cpp  strassenWin.cpp  winogradScaled.cpp
